--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
-<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
 <style>
 *, *:before, *:after { margin: 0; padding: 0; box-sizing: border-box; }
 html, body {
@@ -13,24 +13,14 @@ html, body {
   background: #0e0f1b;
   color: #fff;
   -webkit-overflow-scrolling: touch;
-  overflow-y: auto;
 }
 
 /* Intro */
 .intro {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 2.2rem 2.8rem;
-  background: #191e32;
-  border-radius: 24px;
-  z-index: 120;
-  font-family: 'Poppins';
-  font-size: 2rem;
-  font-weight: 700;
-  text-align: center;
-  box-shadow: 0 0 16px rgba(48,255,228,.32);
+  position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+  padding: 2.2rem 2.8rem; background: #191e32; border-radius: 24px; z-index: 120;
+  font-family: 'Poppins'; font-size: 2rem; font-weight: 700; text-align: center;
+  box-shadow: 0 0 16px rgba(48, 255, 228, .32);
   animation: introHide 2.2s 1s forwards;
 }
 @keyframes introHide {
@@ -39,10 +29,7 @@ html, body {
 
 /* Grid */
 .grid {
-  position: absolute;
-  inset: 5vh 1.5vw;
-  display: grid;
-  gap: 1vw;
+  position: absolute; inset: 5vh 1.5vw; display: grid; gap: 1vw;
 }
 @media (orientation: landscape) {
   .grid { grid-template-columns: repeat(4, 1fr); }
@@ -53,129 +40,104 @@ html, body {
 
 /* Blocks */
 .block {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
-  border-radius: 22px;
-  font-weight: 700;
-  cursor: pointer;
-  background-size: 320% 320%;
-  transition: background-position 4s;
-  overflow: hidden;
+  position: relative; display: flex; align-items: center; justify-content: center;
+  padding: 1rem; border-radius: 22px; font-weight: 700; cursor: pointer;
+  background-size: 320% 320%; transition: background-position 4s; overflow: hidden;
 }
 .block:hover { background-position: 100% 100%; }
 .block::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  border-radius: inherit;
+  content: ""; position: absolute; inset: 0; border-radius: inherit;
   background: linear-gradient(180deg, rgba(255,255,255,.18), transparent 65%);
   mix-blend-mode: overlay;
 }
-.label {
-  z-index: 2;
-  text-align: center;
-}
+.label { z-index: 2; text-align: center; }
 .frase {
-  position: absolute;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
-  text-align: center;
-  opacity: 0;
-  transition: opacity .25s;
+  position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;
+  padding: 1rem; text-align: center; opacity: 0; transition: opacity .25s;
 }
 .block.show .label { opacity: 0; }
 .block.show .frase { opacity: 1; }
 
 /* Portada */
 .portada {
-  position: absolute;
-  inset: 0;
-  display: none;
-  align-items: center;
-  justify-content: center;
+  position: absolute; inset: 0; display: none;
+  align-items: center; justify-content: center; flex-direction: column;
+  padding: 1rem; gap: .95rem; text-align: center;
   animation: pop .6s ease-out forwards;
+  max-height: 90%;
+  overflow: hidden;
 }
 @keyframes pop {
-  0% { transform: scale(.85); opacity: 0; }
+  0% { transform: scale(.8); opacity: 0; }
   100% { transform: scale(1); opacity: 1; }
 }
-.portada-inner {
-  background: rgba(255,255,255,0.03);
-  border: 1px solid rgba(255,255,255,0.08);
-  border-radius: 18px;
-  padding: 1.5rem;
-  width: 100%;
-  max-width: 88%;
-  box-shadow: 0 8px 24px rgba(0,0,0,0.25);
+.portada img {
+  max-width: 88%; max-height: 72%; border-radius: 18px;
+  box-shadow: 0 12px 32px rgba(0,0,0,.55);
+}
+.emoji-big {
+  font-size: clamp(2.6rem, 7vw, 4rem);
+  filter: drop-shadow(0 4px 8px rgba(0,0,0,.3));
+}
+
+/* Escalado inteligente */
+.port-text-wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
-  gap: .6rem;
+  transform-origin: top center;
 }
-.portada h2 {
-  font-size: clamp(1.7rem, 5vw, 2.3rem);
+.port-text h2 {
+  font-size: clamp(1.9rem, 5vw, 3rem);
   font-weight: 800;
-  line-height: 1.2;
-  word-break: break-word;
-  max-width: 90%;
-  text-shadow: 0 1px 4px rgba(0,0,0,0.4);
+  line-height: 1.15;
+  text-align: center;
+  text-shadow: 0 2px 6px rgba(0,0,0,.35);
 }
-.portada p {
-  font-size: clamp(1rem, 3vw, 1.4rem);
+.port-text p {
+  font-size: clamp(.85rem, 2.4vw, 1.15rem);
   font-weight: 600;
   opacity: .9;
-}
-.emoji-big {
-  font-size: clamp(1.6rem, 5vw, 2.3rem);
-  filter: drop-shadow(0 2px 4px rgba(0,0,0,0.4));
-  margin-top: .3rem;
+  margin-top: .25rem;
+  text-align: center;
 }
 
 /* CTA */
 .cta {
-  position: fixed;
-  bottom: 2.8vh;
-  left: 50%;
-  transform: translateX(-50%);
-  display: none;
-  gap: 1.2rem;
-  z-index: 100;
+  position: fixed; bottom: 3vh; left: 50%; transform: translateX(-50%);
+  display: none; gap: 1rem; z-index: 100;
 }
 .cta button {
-  border: none;
-  padding: .6rem 1.2rem;
-  border-radius: 999px;
-  font-size: .9rem;
-  font-weight: 700;
-  cursor: pointer;
+  border: none; padding: .55rem 1.15rem; border-radius: 999px;
+  font-size: .85rem; font-weight: 600; font-family: 'Archivo', sans-serif;
+  cursor: pointer; transition: all 0.25s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.12); letter-spacing: 0.3px;
 }
-#otro { background: #ffd1d1; color: #000; }
-#fisico { background: #d1ffd9; color: #000; }
+#otro {
+  background: linear-gradient(135deg, #5fbfff, #1e90ff);
+  color: #fff;
+}
+#otro:hover {
+  filter: brightness(1.15);
+  transform: translateY(-1px);
+}
+#fisico {
+  background: linear-gradient(135deg, #b2f8c8, #42d97c);
+  color: #0c2d1b;
+}
+#fisico:hover {
+  filter: brightness(1.12);
+  transform: translateY(-1px);
+}
 
 /* Celebración */
 .cele {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,.88);
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 110;
+  position: fixed; inset: 0; background: rgba(0,0,0,.88);
+  display: none; align-items: center; justify-content: center; z-index: 110;
 }
 .cele-msg {
-  font-family: 'Poppins';
-  font-size: 2rem;
-  text-align: center;
-  background: rgba(255,255,255,.05);
-  padding: 2rem 3rem;
-  border-radius: 20px;
+  font-family: 'Poppins'; font-size: 2rem; text-align: center;
+  background: rgba(255,255,255,.05); padding: 2rem 3rem; border-radius: 20px;
 }
 .num { color: #30ffe4; font-weight: 900; font-size: 2.8rem; }
 </style>
@@ -186,83 +148,80 @@ html, body {
 <div class="grid" id="grid"></div>
 
 <div class="cta" id="cta">
-  <button id="otro">🎲 Otro digital</button>
-  <button id="fisico">📖 Abrí uno físico</button>
+  <button id="otro">🎲 Quiero otro digital</button>
+  <button id="fisico">📖 Abrí un libro físico</button>
 </div>
 
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
-const grid = document.getElementById("grid"),
-      cta = document.getElementById("cta"),
-      btnOtro = document.getElementById("otro"),
-      btnLibro = document.getElementById("fisico"),
-      cele = document.getElementById("cele"),
-      celeMsg = document.getElementById("celeMsg");
+const grid = document.getElementById("grid"), cta = document.getElementById("cta"),
+      btnOtro = document.getElementById("otro"), btnLibro = document.getElementById("fisico"),
+      cele = document.getElementById("cele"), celeMsg = document.getElementById("celeMsg");
 
-let libro = null;
-const portIdx = Math.floor(Math.random() * 4);
-let revealed = false;
-const emojis = ["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"];
+let libro = null; const portIdx = Math.floor(Math.random() * 4); let revealed = false;
 const isURL = s => /^https?:\/\//i.test(s || "");
-const grad = i => `linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
+const emojis = ["🌊", "🛡️", "🧠", "✨", "📘", "🔮", "❤️", "🪞"];
+const grad = i => linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i + 1) % 4]});
 
-function buildPort(i) {
-  const d = document.createElement("div");
-  d.className = "portada";
+/* Escalado dinámico perfecto */
+function adjustScale(wrap){
+  const parent = wrap.closest(".portada");
+  if (!parent) return;
+  const available = parent.clientHeight - 40;
+  let scale = 1;
+  wrap.style.transform = scale(1);
+  const fits = () => wrap.scrollHeight <= available;
+  while (!fits() && scale > 0.55) {
+    scale -= 0.02;
+    wrap.style.transform = scale(${scale});
+  }
+}
 
-  const inner = document.createElement("div");
-  inner.className = "portada-inner";
+/* Crear portada */
+function buildPort(idx){
+  const d = document.createElement("div"); d.className = "portada";
+  const emoji = document.createElement("div"); emoji.className = "emoji-big";
+  emoji.textContent = emojis[idx % emojis.length];
 
-  const title = document.createElement("h2");
-  title.textContent = libro.titulo;
-
-  const author = document.createElement("p");
-  author.textContent = libro.autor;
-
-  const emoji = document.createElement("div");
-  emoji.className = "emoji-big";
-  emoji.textContent = emojis[i % emojis.length];
-
-  inner.append(title, author, emoji);
-  d.appendChild(inner);
+  if (isURL(libro.portada)){
+    d.append(emoji, Object.assign(new Image(), { src: libro.portada, loading: "lazy" }));
+  } else {
+    const wrap = document.createElement("div"); wrap.className = "port-text-wrap";
+    const box = document.createElement("div"); box.className = "port-text";
+    box.innerHTML = <h2>${libro.titulo}</h2><p>${libro.autor}</p>;
+    wrap.appendChild(box);
+    d.append(emoji, wrap);
+    setTimeout(() => adjustScale(wrap), 0);
+  }
   return d;
 }
 
-function render() {
+/* Render */
+function render(){
   grid.innerHTML = "";
-  for (let i = 0; i < 4; i++) {
-    const card = document.createElement("div");
-    card.className = "block";
-    card.dataset.i = i;
+  for (let i = 0; i < 4; i++){
+    const card = document.createElement("div"); card.className = "block"; card.dataset.i = i;
     card.style.background = grad(i);
-
-    const label = document.createElement("div");
-    label.className = "label";
+    const label = document.createElement("div"); label.className = "label";
     label.style.color = libro.textColors?.[i] || "#fff";
-    label.textContent = `${emojis[i % emojis.length]} ${libro.palabras[i]}`;
-
-    const frase = document.createElement("div");
-    frase.className = "frase";
-    frase.style.color = libro.textColors?.[i] || "#fff";
-    frase.textContent = libro.frases[i];
-
+    label.textContent = ${emojis[i % emojis.length]} ${libro.palabras[i]};
+    const frase = document.createElement("div"); frase.className = "frase";
+    frase.style.color = libro.textColors?.[i] || "#fff"; frase.textContent = libro.frases[i];
     const port = buildPort(i);
     if (i === portIdx) card.append(port);
-    card.append(label, frase);
-    card.onclick = () => handleClick(card, i, port, label);
+    card.append(label, frase); card.onclick = () => handleClick(card, i, port, label);
     grid.append(card);
   }
 }
 
-function handleClick(card, i, port, labelRef) {
+function handleClick(card, i, port, label){
   if (revealed && i !== portIdx) return location.reload();
-  if (i === portIdx && !revealed) {
-    labelRef.style.display = "none";
+  if (i === portIdx && !revealed){
+    label.style.display = "none";
     port.style.display = "flex";
     [...grid.children].forEach((c, j) => { if (j !== portIdx) c.classList.add("show"); });
-    cta.style.display = "flex";
-    revealed = true;
+    cta.style.display = "flex"; revealed = true;
   } else if (!revealed) {
     card.classList.toggle("show");
   }
@@ -271,30 +230,28 @@ function handleClick(card, i, port, labelRef) {
 btnOtro.onclick = () => location.reload();
 
 btnLibro.onclick = async () => {
-  btnLibro.disabled = true;
-  cele.style.display = "flex";
+  btnLibro.disabled = true; cele.style.display = "flex";
   celeMsg.innerHTML = '✨ <span class="num">...</span><br>libros físicos abiertos';
   try {
     const r = await fetch("https://triggui-api.vercel.app/api/increment");
     const d = await r.json();
-    celeMsg.innerHTML = `✨ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>libros físicos abiertos`;
+    celeMsg.innerHTML = ✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos;
   } catch {
     celeMsg.textContent = "📚 Error al contar libros";
   }
   setTimeout(() => {
     cele.style.display = "none";
-    cta.style.display = "flex";
-    btnLibro.disabled = false;
+    cta.style.display = "flex"; btnLibro.disabled = false;
   }, 2300);
 };
 
-(async () => {
+(async()=>{
   try {
     const r = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts=" + Date.now());
     const data = await r.json();
     libro = data.libros[Math.floor(Math.random() * data.libros.length)];
     render();
-  } catch (e) {
+  } catch(e) {
     alert("No se pudo cargar Triggui.");
     console.error(e);
   }
